add neighbors route
